<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nyra.mudraapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_course"
        android:name="com.nyra.mudraapp.ui.courses.CourseFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_course" />

    <activity
        android:id="@+id/navigation_challenge"
        android:name="com.nyra.mudraapp.ui.challenge.ChallengeActivity"
        android:label="@string/title_challenge"
        tools:layout="@layout/activity_challenge" />
</navigation>