<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_choco"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_mudra"
            android:textSize="34sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDecription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_mudra"
            android:textSize="17sp"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/list_menu_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_menu1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/image_menu_course"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/course_bg"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/title_menu_course"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_menu_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_menu_course"
                    android:textColor="@color/light_blue2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    android:paddingTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/image_menu_course"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/list_menu_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_menu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/image_menu_challenge"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/challenge_bg"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/title_menu_challenge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_menu_challenge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_menu_challenge"
                    android:textColor="@color/light_blue2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    android:paddingTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/image_menu_challenge"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>