<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_choco"
    tools:context=".ui.challenge.ChallengeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge_title"
                android:textSize="25sp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvChallengeDesc"/>

            <TextView
                android:id="@+id/tvChallengeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge_desc"
                android:textSize="14sp"
                android:textColor="@color/light_blue"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUpload"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/imgAsk"
                    android:layout_width="70dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_ask1"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvChallengeDesc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_question_challenge"
                    android:padding="12dp"
                    android:paddingStart="16dp"
                    android:text="@string/challenge_ask"
                    android:textColor="@color/light_choco"
                    android:textSize="13sp"
                    app:layout_constraintStart_toEndOf="@id/imgAsk"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/previewImg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_image_24dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAsk"/>

            <Button
                android:id="@+id/btnUnggah"
                android:layout_width="250dp"
                android:layout_height="42dp"
                android:text="@string/upload_image"
                android:background="@drawable/button_upload_image"
                android:textColor="@color/light_choco"
                android:textStyle="bold"
                android:layout_marginTop="35dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/previewImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/captureImg"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="270dp"
                    app:srcCompat="@drawable/ic_camera_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/btnNext"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_arrow_right_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>