<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_choco"
    tools:context=".ui.courses.CourseFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/list_sibi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_menu_sibi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/image_sibi"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sibi_bg"
                    app:layout_constraintBottom_toTopOf="@+id/title_course1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_course1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/title_sibi"
                    android:textColor="@color/light_blue2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_sibi" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/list_bisindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_menu_bisindo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/image_bisindo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bisindo_bg"
                    app:layout_constraintBottom_toTopOf="@+id/title_course2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_course2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/title_bisindo"
                    android:textColor="@color/light_blue2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_bisindo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/list_asl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_menu_asl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/image_asl"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/asl_bg"
                    app:layout_constraintBottom_toTopOf="@+id/title_course3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_course3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/title_asl"
                    android:textColor="@color/light_blue2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_asl" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>